# pthash

./: .gitignore  CMakeLists.txt  README.md  README_build_phf.md  repomix.json  test_fastmod.cpp
include/: single_phf.hpp
include/builders/: external_memory_builder_single_phf.hpp  internal_memory_builder_single_phf.hpp  util.hpp
include/utils/: bucketers.hpp  encoders.hpp  hasher.hpp  instrumentation.hpp
src/: build_phf.cpp  generate_test_data.cpp  pthash_dummy.cpp  test_elias_fano.cpp  test_fastmod.cpp
